--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.hadoop.huaxia</groupId>
   <artifactId>bigdata-server</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>bigdata-server Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -27,8 +27,12 @@
     <jackson.version>2.5.4</jackson.version>
     <!-- hadoop版本号 -->
     <hadoop.version>3.1.0</hadoop.version>
+    <!-- spark版本号 -->
+    <spark.version>2.4.1</spark.version>
+    <!-- scala 版本号 -->
+    <scala.version>2.12</scala.version>
   </properties>
-  
+
   <dependencies>
     <!-- 导入WEB有关的开发包 -->
     <!-- 添加servlet3.0核心包 -->
@@ -77,12 +81,6 @@
          <artifactId>slf4j-log4j12</artifactId>  
          <version>${slf4j.version}</version> 
     </dependency>
-    <!-- 格式化对象，方便输出日志 -->
-    <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>1.1.41</version>
-    </dependency>
     <!-- log end -->
     
     <!-- 阿里的json工具类 -->
@@ -110,10 +108,30 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.0.0</version>
     </dependency>
+    
+    <dependency>  
+        <groupId>jdk.tools</groupId>  
+        <artifactId>jdk.tools</artifactId>  
+        <version>1.8</version>  
+        <scope>system</scope>  
+        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
+    </dependency>
+    
     <!-- hadoop依赖包 -->
+    <!-- start -->
 	<dependency>
 	    <groupId>org.apache.hadoop</groupId>
 	    <artifactId>hadoop-common</artifactId>
+	    <version>${hadoop.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-annotations</artifactId>
+	    <version>${hadoop.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-auth</artifactId>
 	    <version>${hadoop.version}</version>
 	</dependency>
 	<dependency>
@@ -128,24 +146,64 @@
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.hadoop</groupId>
-	    <artifactId>hadoop-core</artifactId>
-	    <version>1.2.1</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.apache.hadoop</groupId>
 	    <artifactId>hadoop-mapreduce-client-core</artifactId>
 	    <version>${hadoop.version}</version>
 	</dependency>
+	<!-- end -->
 	
-	
-	<dependency>  
-        <groupId>jdk.tools</groupId>  
-        <artifactId>jdk.tools</artifactId>  
-        <version>1.8</version>  
-        <scope>system</scope>  
-        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
-    </dependency>  
+    <!-- spark 依赖 -->
+    <!-- start -->
+	<dependency>
+	    <groupId>org.apache.spark</groupId>
+	    <artifactId>spark-core_${scala.version}</artifactId>
+	    <version>${spark.version}</version>
+	    <exclusions> 
+	     <exclusion> 
+	      <groupId>io.netty</groupId> 
+	      <artifactId>netty</artifactId> 
+	     </exclusion> 
+	    </exclusions>
+	</dependency>
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql_${scala.version}</artifactId>
+        <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-hive_${scala.version}</artifactId>
+        <version>${spark.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming_${scala.version}</artifactId>
+        <version>${spark.version}</version>
+    </dependency>
+	<dependency>
+	    <groupId>org.apache.spark</groupId>
+	    <artifactId>spark-streaming-flume_${scala.version}</artifactId>
+	    <version>${spark.version}</version>
+	</dependency>
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
+        <version>${spark.version}</version>
+    </dependency>
+    <!-- end -->
     
+    <!-- 解决spark jackson 依赖的版本过高 不兼容问题 -->
+    <dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.6.6</version>
+    </dependency>
+    
+    <!-- 解决io.jettyjar包冲突问题 -->
+    <dependency> 
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>4.1.18.Final</version> 
+    </dependency> 
   </dependencies>
   <build>
     <finalName>bigdata-server</finalName>
@@ -159,6 +217,24 @@
                     <!-- 指定source和target的版本 -->  
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <!-- 我运行这个jar所运行的主类 -->
+                            <mainClass>code.demo.spark.JavaWordCount</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>
+                            <!-- 必须是这样写 -->
+                            jar-with-dependencies
+                        </descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
     </plugins>
